# best-attributions

./: .gitignore  Dockerfile  README.md  attribution_methods.py  baselines.py  cfg.py  dataset.py  datasets.py  evaluate_feature_ablation_attributions.py  evaluators.py  evaluators_cv.py  experiment_runner.py  helpers.py  init.py  install_with_pip39_from_lockfile.sh  models.py  pylight.py  pyproject.toml  requirements.txt  run_all_experiments.sh  run_cv_experiment.py  run_experiment.py  run_feature_ablation_experiment.py  run_hillclimber_experiment.py  run_hillclimber_experiment_one_sample.py  run_lig_baseline.py  run_lig_experiment.py  run_lig_random.py  run_ngopt_experiments.sh  run_random_baseline.py  run_random_experiment.py  run_random_experiment_softmax.py  update_lock_and_export_to_requirements.sh
data/: albert-imdb-feature-ablation-1000-with-tpn.json  albert-imdb-feature-ablation-1000.json  albert-imdb-feature-ablation-20.json  albert-imdb-feature-ablation-softmax-1000-with-tpn.json  feature-ablation.json  imdb-distilbert-1000.json  lig.json  random.json  random_all_samples.json  random_one_sample.json  softmax-diff-albert-quantized.npz  tpn_hillclimber.json  tps_hillclimber.json
documents/: master-thesis-proposal.md
notebooks/: Untitled.ipynb  create_feature_ablation.ipynb  create_imdb_subset.ipynb  create_short_imdb_subset.ipynb  first_ngopt_results.ipynb  hill_climbing.ipynb  hill_climbing_experiments.ipynb  inspect.ipynb  inspect_results.ipynb  nevergrad.ipynb  plot_citations.ipynb  plot_dummy_tpn.ipynb  random_results.ipynb  run_TPN.ipynb  viz.ipynb  (+2 more)
(+28 files in other folders)
