[tool.poetry]
name = "best-attributions"
version = "0.1.0"
description = ""
authors = ["tpatzelt <tpatzelt@uos.de>"]

[tool.poetry.dependencies]
python = ">3.7,<3.10"
transformers = ">0"
torch = "1.10.0"
numpy = "^1.21.3"
scipy = "^1.7.1"
jupyter = "^1.0.0"
tqdm = "^4.62.3"
sacred = "^0.8.2"
pymongo = "^3.12.1"
onnxruntime = "^1.9.0"
onnx = "^1.10.2"
captum = "^0.4.1"
dnspython = "<3.0.0,>=1.16.0"
prettytable = "^2.4.0"
pylighter = "^0.0.3"
seaborn = "^0.11.2"
scikit-learn = "^1.0.1"
nevergrad = "^0.4.3"
torchvision = "<0.11.2"
incense = "^0.0.11"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
